# IconGameDev

./: .gitignore  .hermes-nim-proxy.py  .hermes-nim-requests.py  AGENCIAS_AFILIADAS.md  AGENTS.md  COMO_CONFIGURAR_ROBLOX.txt  ESTRATEGIA_20K.md  GUIA_ENVIO_AUTOMATIZADO.md  LICENSE  MONETIZACAO_ESTIMADA.md  ORIGINAL_REQUEST.md  PLANO_100K_14_AGENTES.md  PLANO_ROBLOX_2K.md  PLATAFORMA_INTERNA.md  README.md  ROBLOX_PESSOA_FISICA.md  ROBLOX_REFERENCIA_PLATAFORMA.md  SECURITY.md  SUBMISSION_PLAYBOOK.md  SUBMISSION_RUNBOOK_FINAL.md  TEST_INFRA.md  TEST_READY.md  _audit_check.py  _run_all_maps.py  certify.py  config.yaml  domains.config.json  generate_150_worlds.py  generate_50_templates.py  generate_pack_icons.py  generate_premium_skins.py  package_incremental.py  progress.md  r.bat  regen_frostbound.py  run-skin-packs.bat  run_catalog_gen.bat  run_cyberpunk_skins.bat  run_dry_run.bat  run_dryrun.py  (+13 more)
.loops/: README.md  (+3 more)
bedrock-economy-rpg/: generate_maps.py  pyproject.toml
bedrock-economy-rpg/config/: init_db.py  schema.sql
bedrock-economy-rpg/shared_bp/: manifest.json
bedrock-economy-rpg/shared_bp/functions/: economy_init.mcfunction  tick.json
bedrock-economy-rpg/shared_bp/scripts/: main.js
bedrock-economy-rpg/src/: __init__.py
bedrock-economy-rpg/src/anticheat/: engine.py
bedrock-economy-rpg/src/automod/: engine.py
bedrock-economy-rpg/src/chat/: engine.py
bedrock-economy-rpg/src/commands/: register.py
bedrock-economy-rpg/src/core/: config.py  main.py
bedrock-economy-rpg/src/db/: postgres.py  redis_cache.py
bedrock-economy-rpg/tests/: test_economy.py
(+52193 files in other folders)
